@@ -3,6 +3,8 @@
 workers=10
 bind="127.0.0.1:9000"
 
+timeout=300
+
 accesslog='/home/user1/deploy/taobao/gunicorn.out'
 access_log_format="%(h)s %(l)s %(u)s %(t)s "
 
