@@ -150,7 +150,7 @@
 	  			{% for storage in storages %}
 	  			<li>
 	  				<div id="purchase-head-{{ storage.id }}" class="well well-small mywell">
-			  			<label class="label label-info">{{ storage.origin_no }}&nbsp;&nbsp;&nbsp;{{ storage.title }}&nbsp;&nbsp;&nbsp;{{ storage.post_date }}</label>
+			  			<label class="label label-info">{{ storage.id }}&nbsp;&nbsp;&nbsp;{{ storage.origin_no }}&nbsp;&nbsp;&nbsp;{{ storage.title }}&nbsp;&nbsp;&nbsp;{{ storage.post_date }}</label>
 			  			<div class="head-budget">
 			  				<label>总金额：</label><span>{{ storage.total_fee }}&yen;</span>
 			  				<label>已付金额：</label><span>{{ storage.payment }}&yen;</span>
